# task_cli

./: .coverage  .gitignore  README.md  main.py  menu.py  pyproject.toml  settings.py
db/: data.json
tasks/: db.py  models.py  views.py
tests/: test_db_manager_json.py
utils/: const.py  funcs.py  manager_id.py
